Fix img spacing
and padding on p, img, h2, h3, body, .columns div,  btn

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
 }
 
@@ -15,7 +15,7 @@ body {
   background-color: #f2f2f2;
 }
 
-h2{
+h2 {
   font-size: 2rem;
   text-align: center;
   margin: 0 auto 1.5rem;
@@ -27,10 +27,14 @@ h3 {
 }
 
 img {
-  width: 100px;
+  width: 100%;
   display: block;
   padding: 0 0 1.5rem;
   margin: 0 auto;
+}
+
+div img {
+  width: 100px;
 }
 
 cite {
@@ -72,13 +76,13 @@ p {
 
 .col3 {
   background-color: #aaa;
-  border-left: 1px solid #333
+  border-left: 1px solid #333;
 }
 
 .col4 {
   background-color: #999;
   border-left: 1px solid #333;
-  border-right: 1px solid #333
+  border-right: 1px solid #333;
 }
 
 .btn {
@@ -86,10 +90,14 @@ p {
   padding: .4em .75em .3em;
   color: #fff;
   background-color: #333;
-  font-size: .875rem;
+  font-size: 1.125rem;
   border-radius: 8px;
   text-decoration: none;
   border: 3px solid #333;
+}
+
+.btn-small {
+  font-size: .875rem;
 }
 
 .btn:hover {
